bk_ida/gccida/c1/emit_libcall_block
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3332:4: error: expected ';' after expression
rtx reg_note; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3332:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rbp 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3334:4: error: expected ';' after expression
rtx v13; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3334:5: error: use of undeclared identifier 'v13'; did you mean 'v12'?
rtx v13; // r14 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3333:18: note: 'v12' declared here
 struct rtx_def *v12; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3335:4: error: expected ';' after expression
rtx v14; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3335:5: error: use of undeclared identifier 'v14'; did you mean 'v12'?
rtx v14; // rbx 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3333:18: note: 'v12' declared here
 struct rtx_def *v12; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3336:4: error: expected ';' after expression
rtx v15; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3336:5: error: use of undeclared identifier 'v15'; did you mean 'v12'?
rtx v15; // r12 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3333:18: note: 'v12' declared here
 struct rtx_def *v12; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3340:4: error: expected ';' after expression
rtx v19; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3340:5: error: use of undeclared identifier 'v19'
rtx v19; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3342:4: error: expected ';' after expression
rtx last_insn; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3342:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3344:4: error: expected ';' after expression
rtx v23; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3344:5: error: use of undeclared identifier 'v23'
rtx v23; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3347:4: error: expected ';' after expression
rtx v26; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3347:5: error: use of undeclared identifier 'v26'
rtx v26; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3354:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3354:36: error: expected expression
v6 = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/optabs.c:3366:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note = find_reg_note( rtx, REG_EH_REGION, 0LL); 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_libcall_block/src/obj/optabs.o] Error 1
